# peng

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: CMakeLists.txt  config.hpp.in
docs/: CMakeLists.txt  Doxyfile.in
include/peng/: config.hpp  demangler.hpp  directory.hpp  factory_base.hpp  peng.hpp  plugin.hpp  plugin_base_factory.hpp  plugin_factory.hpp  plugin_loader.hpp  plugin_manager.hpp  version.hpp
include/peng/detail/: plugin_base_factory.inl  plugin_factory.inl
src/: demangler.cpp  directory.cpp  factory_base.cpp  plugin.cpp  plugin_loader.cpp  plugin_manager.cpp  version.cpp
tests/: CMakeLists.txt
